# aonalyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile.agent  Dockerfile.api  Dockerfile.dashboard  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-staging.yml  deploy-vps.yml  release.yml
app/action/: action_items_generator.py  action_labels.py  action_models.py  action_package_formatter.py  action_service.py  downgrade_condition_builder.py  entry_condition_builder.py  invalidation_condition_builder.py  manual_option_input_action_builder.py  next_review_trigger_builder.py  option_contract_criteria_builder.py  suggested_action_summary.py  upgrade_condition_builder.py  watch_condition_builder.py
app/agent/: agent_run_recorder.py  agent_status_reporter.py  earnings_calendar_refresh_job.py  filing_refresh_job.py  full_pipeline.py  iv_risk_refresh_job.py  job_run_logger.py  macro_refresh_job.py  main.py  manual_refresh_controller.py  market_data_refresh_job.py  market_regime_refresh_job.py  news_refresh_job.py  option_chain_refresh_job.py  scan_schedule_manager.py  scheduled_job_registry.py  scheduler.py  setup_detection_refresh_job.py  stock_setup_refresh_job.py  technical_refresh_job.py
app/api/: dto.py  main.py  (+1 more)
docs/: action-label-guide.md  ai-provider-guide.md  architecture-20-layers.md  architecture-diagram.md  ci-cd-guide.md  decision-flow.md  default-strategy-profile.md  environment-variables.md  experience-usage-flow.md  export-import-guide.md  manual-option-input-guide.md  memory-experience-guide.md  naming-conventions.md  operating-manual.md  project-boundaries.md  project-identity.md  refresh-schedule-guide.md  release-checklist.md  screenshots.md  troubleshooting.md  vps-deployment-guide.md
scripts/: validate_env.py
tests/: test_action_suggestion_layer.py  test_agent_refresh_routes.py  test_agent_scheduler.py  test_ai_analysis_core.py  test_ai_analysis_routes.py  test_ai_provider_manager.py  test_ai_provider_routes.py  test_ai_provider_service.py  test_ai_providers.py  test_api_foundation.py  test_chat_service.py  test_content_hash.py  test_dashboard_helpers.py  test_dashboard_page_views.py  test_dashboard_pages_render.py  test_data_quality.py  test_data_sufficiency_gate.py  test_database_models.py  test_days_to_earnings.py  test_decision_intelligence.py  test_do_not_touch.py  test_earnings_before_expiration_checker.py  test_earnings_calendar_service.py  test_earnings_refresh_job.py  test_earnings_risk_service.py  test_earnings_routes.py  test_ensure_tables_gate.py  test_event_analysis_service.py  test_event_normalizer.py  test_event_routes.py  test_filing_service.py  test_governance_settings_pipeline.py  test_hard_filter_gate.py  test_health.py  test_importance_classifier.py  test_iv_history_service.py  test_iv_rank_and_percentile.py  test_iv_risk_refresh_job.py  test_iv_risk_service.py  test_iv_routes.py  (+48 more)
(+274 files in other folders)
