[project]
name = "aonalyzer"
version = "0.1.0"
description = "Aonalyzer is a local, Dockerized, AI-assisted equity and options research operating system."
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
# Alembic migration revisions are generated artifacts; exclude from linting.
extend-exclude = ["app/database/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# UP017 (datetime.UTC over timezone.utc) is intentionally not followed: the
# codebase uses the ``timezone.utc`` + ``utc_now()`` convention consistently.
ignore = ["UP017"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency markers are call-in-default-argument by design (B008).
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
